Gist: Temporary fix for line spacing, until GitHub gets to it

--- a/github-dark.css
+++ b/github-dark.css
@@ -164,6 +164,10 @@
     position: relative;
     top: -1.5px;
   }
+  /* HACK: Fix Gist line alignment */
+  .file-data pre, .line-data {
+    line-height: inherit !important;
+  }
   /* === show === */
   .color-label.selected .color {
     display: block !important;
